选做题1: 不同GC策略使用512M堆内存演示